# intellij-aosp-merge

./: .gitignore  Makefile  README.md  deaosp.py  missing-commits.py  patchup.py  pyproject.toml  requirements.txt
aosp/: __about__.py  _aosp.py  _consts.py  _deaosp.py  _git.py  _main.py  _missing.py  _patch.py  _pick.py  _reset.py  _review.py  _test.py  _util.py  auto_patchup.py
